Closed Bug 216285 Opened 22 years ago Closed 22 years ago

nsAddressBook.cpp:1267: error: comma at end of enumerator list; gcc 3.3.1

Categories

(SeaMonkey :: MailNews: Address Book & Contacts, defect)

x86
Linux
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: calum.mackay, Assigned: sspitzer)

References

Details

(Keywords: fixed1.4.1)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030815 Mozilla Firebird/0.6.1+ Build Identifier: 20030815 When compiled with gcc 3.3.1, we get this failure: c++ -o nsAddrDatabase.o -c -DOSTYPE=\"Linux2.6\" -DOSARCH=\"Linux\" -I../../../ dist/include/xpcom -I../../../dist/include/xpcom_obsolete -I../../../dist/includ e/string -I../../../dist/include/rdf -I../../../dist/include/rdfutil -I../../../ dist/include/appshell -I../../../dist/include/dom -I../../../dist/include/layout -I../../../dist/include/widget -I../../../dist/include/mork -I../../../dist/inc lude/docshell -I../../../dist/include/pref -I../../../dist/include/necko -I../.. /../dist/include/locale -I../../../dist/include/unicharutil -I../../../dist/incl ude/uconv -I../../../dist/include/msgbase -I../../../dist/include/msgbaseutil -I ../../../dist/include/mime -I../../../dist/include/appcomps -I../../../dist/incl ude/intl -I../../../dist/include/import -I../../../dist/include/windowwatcher -I ../../../dist/include/mozldap -I../../../dist/include/uriloader -I../../../dist/ include/addrbook -I../../../dist/include -I/usr/local/src/mozilla/cvs/mozilla/di st/include/nspr -I/usr/local/X11R6/include -fPIC -I/usr/local/X11R6/inclu de -fno-rtti -fno-exceptions -Wall -Wconversion -Wpointer-arith -Wcast-align -Wo verloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-long-long -pedantic -fshor t-wchar -pthread -pipe -DNDEBUG -DTRIMMED -O2 -march=i686 -I/usr/local/X11R6/i nclude -DMOZILLA_CLIENT -include ../../../mozilla-config.h -Wp,-MD,.deps/nsAddrD atabase.pp nsAddrDatabase.cpp nsAddressBook.cpp:1267: error: comma at end of enumerator list make[5]: *** [nsAddressBook.o] Error 1 Reproducible: Always Steps to Reproduce: 1. 2. 3. I think this might be caused by gcc tightening up on pedantic errors (we compile -pedantic here), and in particular the recent change to treat pedantic warning as hard errors. Is this enum valid code? I only have C refs and standards here, which suggest it is not valid C, but this is C++.
workaround confirmed: configure with "--disable-pedantic"
i just checked in a fix for this.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
a=dbaron if you want to put the fix on the 1.4 branch. (The error occurs in gcc 3.3.1, the newest release of gcc, so reports of this error are likely to increase...)
Attached patch patchSplinter Review
This is here for the sake of posterity.
Attachment #130228 - Flags: approval1.4.x?
Attachment #130228 - Flags: approval1.4.x? → approval1.4.x+
Checked into MOZILLA_1_4_BRANCH as well.
I think you should add the fixed1.4.1 keyword here (can't do it myself, sorry).
Keywords: fixed1.4.1
Blocks: 224532
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: