Bug #216285 --> fix build bustage on unix building with pendantic. Remove a comma at the end of the enumerated list.